This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: PEG Generator: Fix scripts to always use the correct parser
Type: behavior Stage: resolved
Components: Demos and Tools Versions: Python 3.10, Python 3.9
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: lys.nikolaou Nosy List: gvanrossum, lys.nikolaou, miss-islington, pablogsal
Priority: normal Keywords: patch

Created on 2020-05-19 19:05 by lys.nikolaou, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 20235 merged lys.nikolaou, 2020-05-19 19:08
PR 20396 merged miss-islington, 2020-05-25 19:52
Messages (3)
msg369381 - (view) Author: Lysandros Nikolaou (lys.nikolaou) * (Python committer) Date: 2020-05-19 19:05
All the scripts in Tools/peg_generator/scripts need to be updated, since they mostly assume that ast.parse and compile use the old parser. We can use the _peg_parser extension module instead, but it well need some enhancements so that it also supports compilation to bytecode.
msg369917 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2020-05-25 19:52
New changeset 9645930b5bc1833ef495891d22052d1ba65ab7ea by Lysandros Nikolaou in branch 'master':
bpo-40688: Use the correct parser in the peg_generator scripts (GH-20235)
https://github.com/python/cpython/commit/9645930b5bc1833ef495891d22052d1ba65ab7ea
msg369920 - (view) Author: miss-islington (miss-islington) Date: 2020-05-25 20:11
New changeset 3c6c86ab77464e6bcb489064d0ec1be5d1b19f3a by Miss Islington (bot) in branch '3.9':
bpo-40688: Use the correct parser in the peg_generator scripts (GH-20235)
https://github.com/python/cpython/commit/3c6c86ab77464e6bcb489064d0ec1be5d1b19f3a
History
Date User Action Args
2022-04-11 14:59:31adminsetgithub: 84865
2020-05-25 20:11:43miss-islingtonsetmessages: + msg369920
2020-05-25 20:00:16lys.nikolaousetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2020-05-25 19:52:13miss-islingtonsetnosy: + miss-islington
pull_requests: + pull_request19659
2020-05-25 19:52:03pablogsalsetmessages: + msg369917
2020-05-19 19:08:52lys.nikolaousetkeywords: + patch
stage: patch review
pull_requests: + pull_request19522
2020-05-19 19:05:35lys.nikolaoucreate